# py-pdfc

./: .gitignore  README.md  example_presets.yaml  main.py  pyproject.toml
controllers/: main_controller.py
models/: compression_settings_model.py  person_model.py
pdfc/: __main__.py  main.py
pdfc/cli/: compress_parameters.py  input.py  output.py
pdfc/cli/commands/: compare.py  compress.py  compress_input.py  pdf_file_filter.py
pdfc/domain/: errors.py  models.py
pdfc/services/: compression.py  compression_service.py
pdfc/storage/: pdf_compressor.py  presets_storage.py
pdfc/tests/cli/: test_compare_command.py  test_compress_command.py  test_compress_input.py
pdfc/tests/domain/: test_errors.py  test_models.py
pdfc/tests/services/: test_compression.py
pdfc/tests/storage/: test_pdf_compressor.py  test_presets_storage.py
src/: main.py
src/controllers/: main_controller.py
src/models/: compression_settings_model.py
src/views/: input_view.py  output_view.py
views/: output_view.py
