[project]
name = "pdfc"
version = "0.1.0"
description = "A command line tool for compressing PDF files"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Corvin Gröning" }
]
keywords = ["pdf", "compress", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dependencies = [
    "questionary>=2.0.0",
    "rich>=14.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "coverage>=7.0",
]

[tool.setuptools]
packages = ["pdfc"]

[project.scripts]
pdfc = "pdfc.main:main"

[tool.pytest.ini_options]
testpaths = ["pdfc/tests"]

[tool.mypy]
check_untyped_defs = true

[tool.pyright]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/*.pyc",
    ".venv",
    "venv",
]
